# PhotoPoint

./: README.md  pyproject.toml
src/: pyproject.toml
src/photo_point/notify/: forms.py  services.py  urls.py  views.py
src/photo_point/notify/sms/: sms_message.py
src/photo_point/notify/sms/backends/: __init__.py  smsc.py
src/photo_point/notify/sms/smsc_api/: config.py  smsc_api.py
src/photo_point/notify/templates/: notify.html
src/photo_point/photo_point/: asgi.py  settings.py  urls.py  wsgi.py
