[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["DonOutcast <sham1996@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.5"
requests = "^2.32.4"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
